# BoilR

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  Readme.md  TODO.md  build.rs  configuration.md  tips_for_linux.md
.cargo/: config  config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  release_on_v_tag.yml  rust-clippy.yml  trigger_release.yml
apps/boilr-tauri/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.cjs  tauri.conf.json  tsconfig.json  vite.config.ts
apps/boilr-tauri/src/: App.tsx  main.rs  settings.ts  styles.css  types.ts
crates/boilr-core/: Cargo.toml
crates/boilr-core/src/: config.rs  defaultconfig.toml  lib.rs  migration.rs  settings.rs
crates/boilr-core/src/steam/: collections.rs  installed_games.rs  mod.rs  proton_string.txt  proton_vdf_util.rs  restarter.rs  settings.rs  utils.rs
crates/boilr-core/src/steamgriddb/: cached_search.rs  image_type.rs  settings.rs
crates/boilr-core/src/sync/: synchronization.rs
crates/boilr-core/src/testdata/: 2D5C19734137C4172B48478C09F908BD.item  60D16FC34A870439914B5282434CD35A.item
crates/boilr-core/src/testdata/acf/: appmanifest_763890.acf
crates/boilr-core/src/testdata/flatpak/: example_output.txt
crates/boilr-core/src/testdata/itch/: other-butler.db-wal
crates/boilr-core/src/testdata/leveldb/: test_collection_value.json  testcollections.json  testcollections_formattet.json
crates/boilr-core/src/testdata/vdf/: user-collections.json
flatpak/: cargo-lock.json  dk.philipk.BoilR.appdata.xml  dk.philipk.BoilR.desktop  dk.philipk.BoilR.metainfo.xml  dk.philipk.BoilR.yml  flatpak-cargo-generator.py  io.github.philipk.boilr.appdata.xml  io.github.philipk.boilr.desktop  io.github.philipk.boilr.metainfo.xml  io.github.philipk.boilr.yml  update-cargo-lock-json.sh
gui/: mainview.fl
scripts/: bootstrap-frontend.sh  build-tauri.sh  build.bat  check_logs.bat  dev-egui.sh  dev-tauri.sh  run.bat  setup-dev-environment.ps1  test-tauri.sh
src/: backups.rs  cached_search.rs  config.rs  defaultconfig.toml  lib.rs  logging.rs  main.rs  migration.rs  platform.rs  renames.rs  settings.rs  single_instance.rs
src/amazon/: amazon_game.rs  amazon_platform.rs  amazon_settings.rs  mod.rs
src/bottles/: mod.rs  platform.rs  settings.rs
src/egs/: epic_platform.rs  epic_ui.rs  example_item.json  get_manifests.rs  manifest_item.rs  mod.rs  paths.rs  settings.rs
src/flatpak/: platform.rs  settings.rs
src/gog/: gog_config.rs  gog_game.rs  gog_platform.rs  gog_settings.rs  mod.rs
src/heroic/: heroic_game.rs  heroic_game_type.rs  heroic_platform.rs  mod.rs  settings.rs
src/itch/: butler_db_parser.rs  itch_game.rs  itch_platform.rs  mod.rs  receipt.rs  settings.rs
src/legendary/: get_legendary_games.rs  legendary_game.rs  legendary_platform.rs  mod.rs  settings.rs
src/lutris/: game_list_parser.rs  lutris_game.rs  lutris_platform.rs  mod.rs  settings.rs  test_output.txt
src/origin/: mod.rs  origin_game.rs  origin_platform.rs  settings.rs
src/steam/: collections.rs  installed_games.rs  mod.rs  proton_vdf_util.rs  restarter.rs  settings.rs  utils.rs
src/steamgriddb/: cached_search.rs  downloader.rs  image_type.rs  mod.rs  settings.rs
src/sync/: mod.rs  symlinks.rs  sync.rs  synchronization.rs
src/testdata/itch/: butler.db-wal
src/testdata/leveldb/: test_collection.json  test_collection_value.json
src/testdata/vdf/: compatmappingsection.vdf  testconfig.vdf  testconfig_expected.vdf
src/ui/: defines.rs  mainview.rs  mod.rs  ui.rs  ui_backup.rs  ui_disconnect.rs  ui_image_download.rs  ui_import_games.rs  ui_settings.rs  uiapp.rs
src/ui/components/: game_image_button.rs  mod.rs  steam_user_select.rs
src/ui/images/: constants.rs  gamemode.rs  gametype.rs  hasimagekey.rs  image_resize.rs  image_select_state.rs  mod.rs  possible_image.rs  texturestate.rs  ui_image_download.rs  useraction.rs
src/ui/images/pages/: change_grid_db_id.rs  mod.rs  pick_new_image.rs  select_image_type.rs  shortcut_images_overview.rs  steam_images_overview.rs
src/uplay/: game.rs  mod.rs  platform.rs
