[workspace]
members = ["crates/boilr-core"]

[package]
edition = "2021"
name = "boilr"
version = "1.9.6"

[dependencies]
boilr-core = { path = "crates/boilr-core" }
copypasta = "0.10.2"
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
futures = "0.3.31"
image = { version = "0.25.8", features = ["png", "webp", "jpeg"] }
tokio = { version = "1.41.0", features = ["full"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
steamgriddb_api = "0.3.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
time = { version = "0.3.44", features = ["formatting"] }
dashmap = { version = "6.1.0", features = ["serde"] }
dyn-clone = "1.0.20"
sysinfo = "0.32.1"
steam_shortcuts_util = "1.1.8"
flate2 = "1.1.5"
base64 = "0.22.1"
is_executable = "1.0.5"
nom = "7.1.3"
rusty-leveldb = "3.0.3"
toml = "0.9.8"

[target."cfg(windows)"]
[target."cfg(windows)".build-dependencies]
winres = "^0.1.12"

[target."cfg(windows)".dependencies]
winreg = "0.55.0"
sqlite = "0.37.0"
roxmltree = "0.21.1"

[target.'cfg(not(windows))'.dependencies]
wayland-cursor = "0.31.7"

[features]
# This feature is enabled when building for a flatpak environment
flatpak = []

#[profile.release]
#codegen-units = 1
#opt-level = "z"  # Optimize for size.
#lto = true
